--- a/waduh.html
+++ b/waduh.html
@@ -1,87 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <style>
-    /* CSS styling */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-
-    #urlInput {
-      width: 80%;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-
-    #getDataBtn {
-      padding: 10px 20px;
-    }
-
-    #resultTable {
-      border-collapse: collapse;
-      width: 100%;
-      margin-top: 20px;
-    }
-
-    #resultTable th, #resultTable td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-
-    #resultTable th {
-      background-color: #f2f2f2;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fetch Coffee Data</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <label for="urlInput">Enter URL:</label><br>
-  <input type="text" id="urlInput" placeholder="Enter URL...">
-  <button onclick="getData()" id="getDataBtn">Get Data</button>
-
-  <table id="resultTable">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Price</th>
-      </tr>
-    </thead>
-    <tbody id="tableBody">
-      <!-- Table content will be added here -->
-    </tbody>
-  </table>
-
-  <script>
-    function getData() {
-      const url = document.getElementById('urlInput').value;
-
-      // Make an AJAX request to the provided URL
-      fetch(url)
-        .then(response => response.json())
-        .then(data => {
-          const tableBody = document.getElementById('tableBody');
-          tableBody.innerHTML = '';
-
-          // Populate the table with the data
-          data.forEach(item => {
-            const row = document.createElement('tr');
-            const cell1 = document.createElement('td');
-            cell1.textContent = item.id;
-            const cell2 = document.createElement('td');
-            cell2.textContent = item.name;
-            const cell3 = document.createElement('td');
-            cell3.textContent = item.price;
-
-            row.appendChild(cell1);
-            row.appendChild(cell2);
-            row.appendChild(cell3);
-            tableBody.appendChild(row);
-          });
-        })
-        .catch(error => console.error('Error fetching data:', error));
-    }
-  </script>
+  <div class="container">
+    <h1>Fetch Coffee Data</h1>
+    <label for="urlInput">Enter URL:</label>
+    <input type="text" id="urlInput" placeholder="Enter URL...">
+    <button onclick="fetchCoffeeData()">Submit</button>
+    <div id="tableContainer"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
